@@ -4,6 +4,7 @@ Date: ???
   Changes:
     - Reverted default settings override of Bob's Adjustable Inserters mod
     - Made Long Inserters ignore tech cost modifier
+    - Streamlined hand crafting of wood pellets and boards
   Bugfixes:
     - Moved Bob's modules settings overrides from Sea Block to Circuit Processing
     - Fixed multiplayer desync issue
